--- a/public/Lab-Files/Lesson5/Challenges/team-project-day2.html
+++ b/public/Lab-Files/Lesson5/Challenges/team-project-day2.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=2, minimum-scale=.5, user-scalable=yes">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Flexbox Elements Layout- Team Project Day2 - Week5</title>
+  <title>Flexbox Elements Layout- Mobile First - Week5</title>
   <link rel="stylesheet" href="normalize.css">
   <link rel="stylesheet" href="../css/flex-layout.css" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
