--- a/public/index.html
+++ b/public/index.html
@@ -3,86 +3,110 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=2, minimum-scale=.5, user-scalable=yes">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="index.css" type="text/css" />
     <title>KellyLampkin-ToC-SACA-Web101</title>
+
 </head>
 
 <body>
+
     <header>
         <h1>Table of Content</h1>
     </header>
 
-    <h2> Lesson 2</h2>
+    <br />
 
-    <!-- Assignment Section-->
-    <h3>Assignment</h3>
-    <ul>
-        <li> <a href="Lab-Files/Lesson2/Assignments/resume.html">Lesson02_Assignment: Resume</a></li>
-    </ul>
+    <div>
+        <h2> Lesson 2</h2>
 
-    <!-- Challenges Section-->
-    <h3>Challenges</h3>
-    <ul>
-        <li><a href="Lab-Files/Lesson2/Challenges/blog.html">Lesson02_Challenge: Write a Blog Post</a></li>
-        <li><a href="Lab-Files/Lesson2/Challenges/text-elements.html">Lesson02_Challenge: Text Level Elements</a></li>
-        <li><a href="Lab-Files/Lesson2/Challenges/list.html">Lesson02_Challenge: Lists</a></li>
-        <li><a href="Lab-Files/Lesson2/Challenges/images.html">Lesson02_Challenge: Images</a></li>
-    </ul>
+        <!-- Assignment Section-->
+        <h3>Assignment</h3>
+        <ul>
+            <li> <a href="Lab-Files/Lesson2/Assignments/resume.html">Lesson02_Assignment: Resume</a></li>
+        </ul>
 
-    <!-- Labs Section
+        <!-- Challenges Section-->
+        <h3>Challenges</h3>
+        <ul>
+            <li><a href="Lab-Files/Lesson2/Challenges/blog.html">Lesson02_Challenge: Write a Blog Post</a></li>
+            <li><a href="Lab-Files/Lesson2/Challenges/text-elements.html">Lesson02_Challenge: Text Level Elements</a></li>
+            <li><a href="Lab-Files/Lesson2/Challenges/list.html">Lesson02_Challenge: Lists</a></li>
+            <li><a href="Lab-Files/Lesson2/Challenges/images.html">Lesson02_Challenge: Images</a></li>
+        </ul>
+
+        <!-- Labs Section
     <h3>Labs</h3>
     <ul>
         <li><a href=" ">Lesson02_Labs: CIW-Lesson2-Lab</a></li>
      </ul>
 -->
 
+        <br />
+        <!-- Lesson 03 Section-->
 
-    <!-- Lesson 03 Section-->
+        <h2> Lesson 3</h2>
 
-    <h2> Lesson 3</h2>
-
-    <!-- Challenges Section-->
-    <h3>Challenges</h3>
-    <ul>
-        <li><a href="Lab-Files/Lesson3/Challenges/fav-wild-animal.html">Lesson03_Challenge: Favorite Wild Animal</a></li>
-        <li><a href="Lab-Files/Lesson3/Challenges/apples-n-bananas.html">Lesson03_Challenge: Apples and Bananas</a></li>
-        <li><a href="Lab-Files/Lesson3/Challenges/positioning.html">Lesson03_Challenge: Positioning</a></li>
-    </ul>
+        <!-- Challenges Section-->
+        <h3>Challenges</h3>
+        <ul>
+            <li><a href="Lab-Files/Lesson3/Challenges/fav-wild-animal.html">Lesson03_Challenge: Favorite Wild Animal</a></li>
+            <li><a href="Lab-Files/Lesson3/Challenges/apples-n-bananas.html">Lesson03_Challenge: Apples and Bananas</a></li>
+            <li><a href="Lab-Files/Lesson3/Challenges/positioning.html">Lesson03_Challenge: Positioning</a></li>
+        </ul>
 
 
-    <!-- Labs Section
+        <!-- Labs Section
     <h3>Lab 3</h3>
     <ul>
         <li><a href=" ">Lesson03_Labs: CIW-Lesson3-Lab</a></li>
      </ul>
 	 -->
+        <br />
+        <h2> Lesson 4</h2>
 
-    <h2> Lesson 4</h2>
+        <!-- Challenges Section-->
+        <h3>Challenges</h3>
+        <ul>
+            <li><a href="Lab-Files/Lesson4/Challenges/box-model.html">Lesson04_Challenge:  Box-Model Day 1</a></li>
+            <li><a href="Lab-Files/Lesson4/Challenges/flexbox-flags.html">Lesson04_Challenge: Flexbox Flags Day 2</a></li>
+            <li><a href="Lab-Files/Lesson4/Challenges/team-project-day1.html">Lesson04_Challenge: Team Project Day 1</a></li>
+            <li><a href="Lab-Files/Lesson4/Challenges/team-project-day2.html">Lesson04_Challenge: Team Project Day 2</a></li>
+        </ul>
 
-    <!-- Challenges Section-->
-    <h3>Challenges</h3>
-    <ul>
-        <li><a href="Lab-Files/Lesson4/Challenges/box-model.html">Lesson04_Challenge:  Box-Model Day 1</a></li>
-        <li><a href="Lab-Files/Lesson4/Challenges/flexbox-flags.html">Lesson04_Challenge: Flexbox Flags Day 2</a></li>
-        <li><a href="Lab-Files/Lesson4/Challenges/team-project-day1.html">Lesson04_Challenge: Team Project Day 1</a></li>
-        <li><a href="Lab-Files/Lesson4/Challenges/team-project-day2.html">Lesson04_Challenge: Team Project Day 2</a></li>
-    </ul>
-
-    <!-- Labs Section
+        <!-- Labs Section
     <h3>Labs</h3>
     <ul>
         <li><a href=" ">Lesson04_Labs: CIW-Lesson4-Lab</a></li>
      </ul>
 -->
 
-    <h2> Lesson 5</h2>
+        <br />
+        <h2> Lesson 5</h2>
 
-    <!-- Challenges Section-->
-    <h3>Challenges</h3>
-    <ul>
-        <li><a href="Lab-Files/Lesson5/Challenges/team-project-day1.html">Lesson05_Challenge: Team Project Day 1 - Price-Table</a></li>
-        <li><a href="Lab-Files/Lesson5/Challenges/team-project-day2.html">Lesson05_Challenge: Team Project Day 2 -Layouts</a></li>
-    </ul>
+        <!-- Challenges Section-->
+        <h3>Challenges</h3>
+        <ul>
+            <li><a href="Lab-Files/Lesson5/Challenges/team-project-day1.html">Lesson05_Challenge: Team Project Day 1 - Price-Table</a></li>
+            <li><a href="Lab-Files/Lesson5/Challenges/team-project-day2.html">Lesson05_Challenge: Team Project Day 2 -Layouts</a></li>
+        </ul>
 
+        <br />
+
+
+
+
+
+
+
+    </div>
+
+    <!-- Footer -->
+    <footer>
+        <h3><a href="#">Home</a></h3>
+        <p> <strong>Kelly Lampkin</strong> &#124; SACA Web 101 &#124; 2017.05.16 - 2017.07.27</p>
+    </footer>
 
 
 </body>
