--- a/public/lab-files/Lesson6/ginger.html
+++ b/public/lab-files/Lesson6/ginger.html
@@ -9,7 +9,7 @@
 
 <body>
   <!--Start Typing Markup here-->
-
+<div class="page"></div>
   <div class="header">
     <div class="image2"><img src="img/paw-icon.png" alt="Paw Icon"></div>
     <div class="image1"><img src="img/Logo.png" alt="A Dog's Life"></div>
@@ -18,32 +18,16 @@
       <img src="img/Search-Icon.png" alt="search box" class="box"></div>
   </div>
 
-  <div class="page">
     <div class="left"></div>
-    <div class="little pic">
+    <div class="littlepic">
       <img src="img/Ginger-left.png">
     </div>
-    <div class="pic details">
-      <img src="" </div>
-      <div class="right"></div>
-      <img src="img/InsidePage-Photo.png" alt="dog background" class="background">
+    <div class="pic details"></div>
+      <h2 class="ginger">Ginger</h2>
+     
     </div>
 
   </div>
-
-
-<!--
-      <nav class="site-nav">
-        
-        <span class="menu-icon">
-        <svg viewBox="0 0 18 15" width="18px" height="15px">
-          <path fill="#424242" d="M18,1.484c0,0.82-0.665,1.484-1.484,1.484H1.484C0.665,2.969,0,2.304,0,1.484l0,0C0,0.665,0.665,0,1.484,0 h15.031C17.335,0,18,0.665,18,1.484L18,1.484z"/>
-          <path fill="#424242" d="M18,7.516C18,8.335,17.335,9,16.516,9H1.484C0.665,9,0,8.335,0,7.516l0,0c0-0.82,0.665-1.484,1.484-1.484 h15.031C17.335,6.031,18,6.696,18,7.516L18,7.516z"/>
-          <path fill="#424242" d="M18,13.516C18,14.335,17.335,15,16.516,15H1.484C0.665,15,0,14.335,0,13.516l0,0 c0-0.82,0.665-1.484,1.484-1.484h15.031C17.335,12.031,18,12.696,18,13.516L18,13.516z"/>
-        </svg>
-      </span>-->
-
-  </nav>
 
 
   <main>
