--- a/public/Lab-Files/Lesson05/Challenges/Habitat/CCYP/syb_day.html
+++ b/public/Lab-Files/Lesson05/Challenges/Habitat/CCYP/syb_day.html
@@ -74,7 +74,7 @@
                 <td class="center">Breakfast</td>
                 <td>You will cook your own breakfasts and work with others to make sure you are all ready for the day.</td>
             </tr>
-            <tr>
+            <tr class="row-color">
                 <td class="center">7:30 a.m.</td>
                 <td class="center">Devotions</td>
                 <td>Devotions are a time for the group to get ready for the day ahead. Devotions can be anything from the reading of a favorite poem or story to the leading of an icebreaker.</td>
@@ -84,7 +84,7 @@
                 <td class="center">Workday</td>
                 <td>The workday consists of building various phases of the house. It is manual labor. Water and snacks are provided on site.</td>
             </tr>
-            <tr>
+            <tr class="row-color">
                 <td class="center">6 p.m.</td>
                 <td class="center">Dinner</td>
                 <td>Dinner is sometimes eaten with a local church or community group that offers to host the group. Otherwise, SYB participants eat together at their housing facility.</td>
@@ -98,6 +98,9 @@
         </table>
         <br/>
     </article>
+
+
+
 
 
 
