--- a/public/index.html
+++ b/public/index.html
@@ -88,6 +88,17 @@
             <ul>
                 <li><a href="Lab-Files/Lesson05/Challenges/Habitat/CCYP/syb_day.html">Lesson05 - Habitat - CCYP -syb_day.html</a></li>
             </ul>
+            <hr/>
+            <h2>Lesson06</h2>
+            <h3>Challenges:</h3>
+            <ul>
+                <li><a href="https://george-perez.github.io/lesson6_challenge_day1/">Lesson06 - Challenge - Day1.html</a></li>
+                <li><a href="https://george-perez.github.io/lesson6_challenge_day2/">Lesson06 - Challenge - Day2.html</a></li>
+            </ul>
+             <h3>Lab 6</h3>
+            <ul>
+                <li><a href="Lab-Files/Lesson05/Challenges/Habitat/CCYP/syb_day.html">Lesson06 - Habitat - CCYP -syb_day.html</a></li>
+            </ul>
         </blockquote>
     </div>
 </body>
