--- a/public/index.html
+++ b/public/index.html
@@ -97,7 +97,7 @@
             </ul>
              <h3>Lab 6</h3>
             <ul>
-                <li><a href="Lab-Files/Lesson05/Challenges/Habitat/CCYP/syb_day.html">Lesson06 - Habitat - CCYP -syb_day.html</a></li>
+                <li><a href="Lab-Files/Lesson05/Challenges/Habitat/CCYP/syb_day.html">Lesson06 - Lab - CCYP -syb_day.html</a></li>
             </ul>
         </blockquote>
     </div>
