--- a/public/index.html
+++ b/public/index.html
@@ -51,6 +51,9 @@
     
     <!--Lesson 7-->
     <h2><u> Lesson 7</u></h2>
+    <ul>
+        <li><a href="/lab-files/Lesson7/index.html">PlugMa</a></li>
+        </ul>
 
 </body>
 
