--- a/public/lab-files/Lesson5/layout.html
+++ b/public/lab-files/Lesson5/layout.html
@@ -8,10 +8,11 @@
 </head>
 
 <body>
-    <div class="page">
+    <div class="wrapper">
+    <div class="page"></div>
         <div class="header">Header</div>
         <div class="navigation">Navigation</div>
-        <div class="featured">Featured Story</div>
+        <div class="featured story1">Featured Story</div>
         <div class="story story1">Story</div>
         <div class="story story1">Story</div>
         <div class="story story1">Story</div>
