upload completed -adopt-ginger, web-design-nik index-update

--- a/public/Lab-Files/Lesson6/Challenges/adopt-ginger-day1.html
+++ b/public/Lab-Files/Lesson6/Challenges/adopt-ginger-day1.html
@@ -5,106 +5,133 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Adopt a Pet- Team Project Day1 - Week6</title>
+    <title>Adopt a Pet-Challenge Day1 - Week6</title>
     <link rel="stylesheet" href="normalize.css" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Eczar" rel="stylesheet">
     <link rel="stylesheet" href="../css/adopt-ginger.css" type="text/css">
 </head>
 
-
+   
 <body>
 
-    <a href="../../../index.html">Table Of Content</a>
+  <a href="../../../index.html">Table Of Content</a>
 
-    <div class="overall-container">
+  <div class="overall-container">
+    <!-- MOBILE HEADER STARTS -->
+    <Header class="moblie-view">
 
-        <Header>
-            <nav class="menu-left">
-                <img src="img/paw-icon.png" alt="White Dog Paw" class="paw-img"> Menu
+      <div class="logo-center">
+        <img src="img/Logo.png" alt="logo dog image with text: A Dog's Life" class="mobile-logo-size">
+      </div>
 
-                <!-- <div class="dropdown-content">
-                    <a href="#">Link 1</a><br />
-                    <a href="#">Link 2</a><br />
-                    <a href="#">Link 3</a><br />
-                </div>-->
+      <div class="sub-logo">
+        <div class="menu-left">
+          <img src="img/paw-icon.png" alt="White Dog Paw" class="paw-img"> Menu
 
-            </nav>
+          <!--<div class="dropdown-content">
+          <a href="#">Link 1</a><br />
+          <a href="#">Link 2</a><br />
+          <a href="#">Link 3</a><br />
+        </div>-->
+      </div>
 
-            <div class="logo-center">
-                <img src="img/Logo.png" alt="logo dog image with text: A Dog's Life">
-            </div>
+      <div class="search-right">
+        <input size="30" type="text" name="search" placeholder="SEARCH" class="search-bar">
+        <img src="img/Search-Icon.png" alt="Manginfier Search-Icon" class="search-icon">
+      </div>
+    </div>
+  </Header>
 
-            <div class="search-right">
-                <input size="30" type="text" name="search" placeholder="SEARCH" class="search-bar">
-                <img src="img/Search-Icon.png" alt="Manginfier Search-Icon" class="search-icon">
-            </div>
-        </Header>
+  <!-- DESKTOP HEADER STARTS -->
+  <Header class="desktop-view">
 
+    <div class="logo-center">
+      <img src="img/Logo.png" alt="logo dog image with text: A Dog's Life" class="mobile-logo-size">
+    </div>
 
-        <div class="main-content">
+    <div class="menu-left">
+      <img src="img/paw-icon.png" alt="White Dog Paw" class="paw-img"> Menu
 
-            <div class="profile-left">
+      <!-- <div class="dropdown-content">
+      <a href="#">Link 1</a><br />
+      <a href="#">Link 2</a><br />
+      <a href="#">Link 3</a><br />
+    </div>-->
+  </div>
 
-                <div class="profile-pic-topleft">
-                    <img src="img/Ginger-left.png" alt="picture of a puppy">
-                </div>
+  <div class="search-right">
+    <input size="30" type="text" name="search" placeholder="SEARCH" class="search-bar">
+    <img src="img/Search-Icon.png" alt="Manginfier Search-Icon" class="search-icon">
+  </div>
 
-                <div class="profile-details-bottomleft">
-                    <div class="center">
-                        <h1>Ginger</h1>
-                        <h3>Golden Retriever </h3>
-                        <p>Male &#124; 24 months old &#124; 22lbs</p>
-                    </div>
-
-                    <br />
-
-
-                    <div class="bottom-left-icons">
-                        <div class="icon-right-margin"> <img src="img/Phone.png" alt="image of a phone receiver"></div>
-                        <div class="icon-right-margin"> <img src="img/Message.png" alt="image of an email envelope"></div>
-                        <div class="icon-right-margin"> <img src="img/Comment.png" alt="image of a blog chat icon"></div>
-                    </div>
-
-
-                </div>
-            </div>
-            <!-- End of profile-left-->
+</Header>
+<!-- header ends -->
 
 
-            <div class="profile-right">
-                <img src="img/InsidePage-Photo.png" alt="puppy headshot picture">
-            </div>
-            <!--End of profile-right-->
+<div class="main-content">
 
-        </div>
-        <!--End of main-content: contains profile-left and profile-right-->
+  <div class="profile-left">
+
+    <div class="profile-pic-topleft">
+      <img src="img/Ginger-left.png" alt="picture of a puppy" class="ginger-profile-pic">
+    </div>
+
+    <div class="profile-details-bottomleft">
+      <div class="center"><br />
+        <h1>Ginger</h1>
+        <h3>Golden Retriever </h3>
+        <p>Male &#124; 24 months old &#124; 22lbs</p>
+      </div>
+
+      <br />
 
 
-
-        <footer>
-
-            <div class="subscriber-left">
-                <input size="30" type="text" name="search" placeholder="youremail@domain.com" class="subscribe-bar">
-                <button type="button" class="sub-btn">SUBSCRIBE</button> </div>
-
-            <div class="social-icons-center">
-                <img src="img/Facebook-Icon.png" alt="facebook icon" class="icon-right-margin">
-                <img src="img/Twitter-Icon.png" alt="twitter icon" class="icon-right-margin">
-                <img src="img/Google-icon.png" alt="google plus icon" class="icon-right-margin">
-                <img src="img/Linkedin-icon.png" alt="linkedin icon" class="icon-right-margin">
-                <img src="img/Youtube-Icon.png" alt="youtube icon" class="icon-right-margin">
-            </div>
-
-            <div class="donate-right">
-                <div class="green-heart"><img src="img/heart-icon.png" alt="heart shape"></div>
-                <div><button type="button" class="donate-btn">DONATE</button></div>
-            </div>
-
-        </footer>
+      <div class="bottom-left-icons">
+        <div class="icon-right-margin"> <img src="img/Phone.png" alt="image of a phone receiver" class="phone"></div>
+        <div class="icon-right-margin"> <img src="img/Message.png" alt="image of an email envelope" class="email"></div>
+        <div class="icon-right-margin"> <img src="img/Comment.png" alt="image of a blog chat icon" class="blog"></div>
+      </div>
 
 
     </div>
-    <!-- end of overall-container-->
+  </div>
+  <!-- End of profile-left-->
+
+
+  <div class="profile-right">
+    <img src="img/InsidePage-Photo.png" alt="puppy headshot picture" class="ginger-headshot-pic">
+  </div>
+  <!--End of profile-right-->
+
+</div>
+<!--End of main-content: contains profile-left and profile-right-->
+
+
+
+<footer>
+
+  <div class="subscriber-left">
+    <input size="30" type="text" name="search" placeholder="youremail@domain.com" class="subscribe-bar">
+    <button type="button" class="sub-btn">SUBSCRIBE</button> </div>
+
+    <div class="social-icons-center">
+      <img src="img/Facebook-Icon.png" alt="facebook icon" class="icon-right-margin">
+      <img src="img/Twitter-Icon.png" alt="twitter icon" class="icon-right-margin">
+      <img src="img/Google-icon.png" alt="google plus icon" class="icon-right-margin">
+      <img src="img/Linkedin-icon.png" alt="linkedin icon" class="icon-right-margin">
+      <img src="img/Youtube-Icon.png" alt="youtube icon" class="icon-right-margin">
+    </div>
+
+    <div class="donate-right">
+      <div class="green-heart"><img src="img/heart-icon.png" alt="heart shape"></div>
+      <div><button type="button" class="donate-btn">DONATE</button></div>
+    </div>
+
+  </footer>
+
+
+</div>
+<!-- end of overall-container-->
 
 
 </body>
